# Calendar

./: .gitignore  .gitmodules  .travis.yml  Authors.md  Authors_zh_CN.md  CMakeLists.txt  Calendar.pro  ChangeLog.md  ChangeLog_zh_CN.md  DlgOption.cpp  DlgOption.h  DlgOption.ui  FrmEyeNurse.cpp  FrmEyeNurse.h  FrmEyeNurse.ui  FrmFullScreen.cpp  FrmFullScreen.h  FrmFullScreen.ui  FrmStickyList.cpp  FrmStickyList.h  FrmStickyList.ui  FrmStickyNotes.cpp  FrmStickyNotes.h  FrmStickyNotes.ui  FrmTaskPropery.cpp  FrmTaskPropery.h  FrmTasks.cpp  FrmTasks.h  FrmTasks.ui  FrmTasksList.cpp  FrmTasksList.h  FrmTasksList.ui  FrmTop.cpp  FrmTop.h  FrmTop.ui  FrmUpdater.cpp  FrmUpdater.h  FrmUpdater.ui  MainWindow.cpp  MainWindow.h  (+41 more)
.github/workflows/: android.yml  appimage.yml  build.yml  docker.yml  macos.yml  mingw.yml  msvc.yml  qmake.yml  ubuntu.yml  windows.yml
3th_libs/: LunarCalendar.pro  RabbitCommon.pro
App/: App.pro  CMakeLists.txt  DlgOption.cpp  DlgOption.h  DlgOption.ui  FrmEyeNurse.cpp  FrmEyeNurse.h  FrmEyeNurse.ui  FrmUpdater.cpp  FrmUpdater.h  FrmUpdater.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
App/DlgAbout/: DlgAbout.cpp  DlgAbout.ui
App/Resource/Translations/: CalendarApp_ar.ts  CalendarApp_ca.ts  CalendarApp_cs.ts  CalendarApp_da.ts  CalendarApp_de.ts  CalendarApp_el.ts  CalendarApp_en.ts  CalendarApp_en_GB.ts  CalendarApp_es.ts  CalendarApp_et.ts  CalendarApp_fi.ts  CalendarApp_fr.ts  CalendarApp_gd.ts  CalendarApp_gl.ts  CalendarApp_hu.ts  CalendarApp_it.ts  CalendarApp_ja.ts  CalendarApp_ko.ts  CalendarApp_nb.ts  CalendarApp_ne.ts  CalendarApp_nl.ts  CalendarApp_nn.ts  CalendarApp_oc.ts  CalendarApp_pl.ts  CalendarApp_pt_BR.ts  CalendarApp_pt_PT.ts  CalendarApp_ro.ts  CalendarApp_ru.ts  CalendarApp_sk.ts  CalendarApp_sl.ts  CalendarApp_sv.ts  CalendarApp_th.ts  CalendarApp_tr.ts  CalendarApp_uk.ts  CalendarApp_zh.ts  CalendarApp_zh_CN.ts  CalendarApp_zh_TW.ts  TasksApp_zh.ts  TasksApp_zh_CN.ts  TasksApp_zh_TW.ts  (+2 more)
App/android/: AndroidManifest.xml
App/android/res/values/: strings.xml
App/android/res/values-zh/: strings.xml
DlgAbout/: DlgAbout.cpp  DlgAbout.h  DlgAbout.ui
Global/: GlobalDir.cpp  GlobalDir.h  Tool.cpp  Tool.h
Install/: Install.nsi  install.sh
RabbitCommon/: RabbitCommon.pro
Resource/: Resource.qrc
Resource/Translations/: Translations.pri  app_cs.ts  app_da.ts  app_de.ts  app_fr.ts  app_hu.ts  app_ja.ts  app_ko.ts  app_pl.ts  app_ru.ts  app_sk.ts  app_sl.ts  app_uk.ts  app_zh_CN.ts  app_zh_TW.ts
Resource/sink/dark/: style.qss
Script/: build_appimage.sh  build_debpackage.sh  build_depend.sh  build_linux.sh  build_macos.sh  build_rpm_package.sh  install_appimage.sh  test_linux.sh
Src/: Activity.cpp  Activity.h  CMakeLists.txt  DlgContainer.cpp  DlgContainer.h  DlgContainer.ui  DlgTaskActivity.cpp  DlgTaskActivity.h  DlgTaskActivity.ui  FrmActivity.cpp  FrmActivity.h  FrmActivity.ui  FrmCalendar.cpp  FrmCalendar.h  FrmCalendar.ui  FrmCustomActivity.cpp  FrmCustomActivity.h  FrmCustomActivity.ui  FrmFullScreen.cpp  FrmFullScreen.h  FrmFullScreen.ui  FrmStickyList.cpp  FrmStickyList.h  FrmStickyList.ui  FrmStickyNotes.cpp  FrmStickyNotes.h  FrmStickyNotes.ui  FrmTask.cpp  FrmTask.h  FrmTask.ui  FrmTaskActivity.cpp  FrmTaskActivity.h  FrmTaskActivity.ui  FrmTaskProperty.ui  FrmTaskPropery.cpp  FrmTaskPropery.h  FrmTasks.cpp  FrmTasks.h  FrmTasks.ui  FrmTasksList.cpp  (+46 more)
Src/Global/: GlobalDir.cpp  GlobalDir.h  TasksTools.cpp  TasksTools.h  Tool.cpp  Tool.h
Src/Resource/: Resource.qrc  ResourceTasks.qrc
Src/Resource/Translations/: Tasks_ar.ts  Tasks_ca.ts  Tasks_cs.ts  Tasks_da.ts  Tasks_de.ts  Tasks_el.ts  Tasks_en.ts  Tasks_en_GB.ts  Tasks_es.ts  Tasks_et.ts  Tasks_fi.ts  Tasks_fr.ts  Tasks_gd.ts  Tasks_gl.ts  Tasks_hu.ts  Tasks_it.ts  Tasks_ja.ts  Tasks_ko.ts  Tasks_nb.ts  Tasks_ne.ts  Tasks_nl.ts  Tasks_nn.ts  Tasks_oc.ts  Tasks_pl.ts  Tasks_pt_BR.ts  Tasks_pt_PT.ts  Tasks_ro.ts  Tasks_ru.ts  Tasks_sk.ts  Tasks_sl.ts  Tasks_sv.ts  Tasks_th.ts  Tasks_tr.ts  Tasks_uk.ts  Tasks_zh.ts  Tasks_zh_CN.ts  Tasks_zh_TW.ts  Tasks_zh_rCN.ts  Tasks_zh_rTW.ts  Translations.pri
Src/Resource/db/: Activity.sql  TaskActivity.sql
Src/Resource/sink/dark/: style.qss
Src/export/: tasks_export_windows.h
Update/: update.json  update.xml  update_android.xml  update_linux.xml  update_windows.xml
ci/: build-install-tools.sh  build.sh
cmake/: Tasks.pc.in  TasksConfig.cmake.in  Translations.cmake  Utils.cmake
config/: TasksList_en.xml  TasksList_zh.xml
debian/: Calendar.desktop  README  README.Debian  README.source  Tasks.desktop  changelog  control  copyright  postinst  postrm  preinst  prerm  rules  watch
etc/: Calendar_logqt.ini  TasksList_en.xml  TasksList_zh_CN.xml
pri/: Common.pri  Translations.pri
share/: Calendar.sh  org.Rabbit.Calendar.desktop
share/applications/: io.github.KangLin.Calendar.desktop.in  org.Rabbit.Calendar.desktop.in
test/: test_linux.sh
vcpkg/manifests/: vcpkg.json
